# 350

./: .gitignore  CHECKOUT_ORDER_MANAGEMENT_IMPLEMENTATION.md  CHECKOUT_README.md  DYNAMIC_DATA_IMPLEMENTATION.md  ORDER_MANAGEMENT_ISSUE_RESOLUTION.md  README.md  quick-verify.sh  test-admin-orders.sh  test-checkout-system.sh
backend/: .env.example  package-lock.json  package.json
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20250606070126_add_review_model/: migration.sql
backend/prisma/migrations/20250609102453_email_verification/: migration.sql
backend/prisma/migrations/20250610095101_add_customer_info_and_order_statuses/: migration.sql
backend/src/: index.ts
backend/src/config/: cloudinary.ts
backend/src/middleware/: auth.ts
backend/src/routes/: admin.ts  auth.ts  cart.ts  categories.ts  customer-auth.ts  favorites.ts  orders.ts  products.ts  reviews.ts  upload.ts  user-profile.ts
backend/src/utils/: adminUtils.ts  emailService.ts
ecommerce-search-agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ecommerce-search-agent/docker/postgres/: init.sql
ecommerce-search-agent/docker/redis/: redis.conf
ecommerce-search-agent/scripts/: check_db_connection.py  migrate_chromadb.py  rebuild_embeddings.py  seed_backend_data.py  setup.sh  setup_backend_integration.sh  setup_integration.sh  simple_sync.py  sync_backend_data.py  test_chromadb_direct.py  test_integration.py  test_search_integration.py  verify_integration.py
ecommerce-search-agent/src/: main.py
ecommerce-search-agent/src/agents/: admin_agent.py  base_agent.py  image_agent.py  recommendation_agent.py  search_agent.py
ecommerce-search-agent/src/api/: models.py
ecommerce-search-agent/src/api/routes/: admin.py  recommendation.py  search.py
ecommerce-search-agent/src/chains/: query_understanding.py  sql_generation.py
ecommerce-search-agent/src/database/: chromadb_client.py  models.py  postgres.py  redis_client.py
ecommerce-search-agent/src/embeddings/: generator.py  indexer.py
ecommerce-search-agent/src/utils/: duckduckgo_search.py  logger.py  validators.py
ecommerce-search-agent/tests/: seed_postgres.py  test_api.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/cart/: page.tsx
frontend/src/app/categories/: page.tsx
frontend/src/app/favorites/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/orders/: page.tsx
frontend/src/app/products/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: CheckoutModal.tsx  Footer.tsx  Header.tsx  ImageUpload.tsx  MultipleImageUpload.tsx  ProductCard.tsx  ProductSlider.tsx  SearchInput.tsx
frontend/src/contexts/: AdminContext.tsx  AuthContext.tsx  CartContext.tsx  FavoritesContext.tsx  ProductContext.tsx
frontend/src/hooks/: useHydration.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
(+10 files in other folders)
