[project]
name = "ecommerce-search-agent"
version = "0.1.0"
description = "A modern, AI-powered search and recommendation backend for e-commerce platforms"
requires-python = ">=3.11,<3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "chromadb[server]>=0.4.15",
    "openai>=1.3.0",
    "langchain>=0.0.350",
    "langgraph>=0.0.10",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "tenacity>=8.2.3",
    "structlog>=23.2.0",
    "uv>=0.1.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "greenlet>=3.2.3",
    "langchain-openai>=0.3.23",
    "duckduckgo-search>=8.0.4",
    "beautifulsoup4>=4.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.10.0",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "ruff>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"] 
